--- a/portfolio.html
+++ b/portfolio.html
@@ -45,11 +45,21 @@
         </nav>
         <ul class="list header-contacts">
           <li>
-            <a class="link header-mail" href="mailto:info@devstudio.com" lang="en"
-              >info@devstudio.com</a
+            <a class="link header-mail" href="mailto:info@devstudio.com" lang="en">
+              <svg class="header-mail-icon">
+                <use href="./images/aicons.svg#letter" width="16" height="12"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="link header-tel" href="tel:+380961111111">
+              <svg class="header-tel-icon">
+                <use href="./images/aicons.svg#book" width="10" height="16"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
