--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
 
         <ul class="list header-contacts">
           <li>
-            <a class="link header-mail" href="mailto:info@devstudio.com" lang="en"
-              >info@devstudio.com</a
+            <a class="link header-mail" href="mailto:info@devstudio.com" lang="en">
+              <svg class="header-mail-icon">
+                <use href="./images/aicons.svg#letter" width="16" height="12"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
-          <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="link header-tel" href="tel:+380961111111">
+              <svg class="header-tel-icon">
+                <use href="./images/aicons.svg#book" width="10" height="16"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -59,7 +69,7 @@
     <!-- Главный заголовок   -->
     <main>
       <section class="main-section">
-        <div class="container">
+        <div class="container main-container">
           <h1 class="mein-heading">Эффективные решения для вашего бизнеса</h1>
           <button class="main-btn" type="button">Заказать услугу</button>
         </div>
@@ -70,24 +80,37 @@
         <div class="container">
           <ul class="list list-section">
             <li class="list-text">
+              <svg class="page-section-icon" width="270" height="120">
+                <use href="./images/aicons.svg#antenn" width="70" height="70"></use>
+              </svg>
+
               <h3 class="head-section">Внимание к деталям</h3>
               <p class="content-section">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="list-text">
+              <svg class="page-section-icon" width="270" height="120">
+                <use href="./images/aicons.svg#clock" width="70" height="70"></use>
+              </svg>
               <h3 class="head-section">Пунктуальность</h3>
               <p class="content-section">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="list-text">
+              <svg class="page-section-icon" width="270" height="120">
+                <use href="./images/aicons.svg#diagram" width="70" height="70"></use>
+              </svg>
               <h3 class="head-section">Планирование</h3>
               <p class="content-section">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="list-text">
+              <svg class="page-section-icon" width="270" height="120">
+                <use href="./images/aicons.svg#astronaut" width="70" height="70"></use>
+              </svg>
               <h3 class="head-section">Современные технологии</h3>
               <p class="content-section">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -126,6 +149,36 @@
               <div class="indentation-text">
                 <h3 class="name-person">Игорь Демьяненко</h3>
                 <p class="work-person" lang="en">Product Designer</p>
+                <ul class="list list-social-team">
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -133,6 +186,36 @@
               <div class="indentation-text">
                 <h3 class="name-person">Ольга Репина</h3>
                 <p class="work-person" lang="en">Frontend Developer</p>
+                <ul class="list list-social-team">
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -140,6 +223,36 @@
               <div class="indentation-text">
                 <h3 class="name-person">Николай Тарасов</h3>
                 <p class="work-person" lang="en">Marketing</p>
+                <ul class="list list-social-team">
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li>
@@ -147,6 +260,36 @@
               <div class="indentation-text">
                 <h3 class="name-person">Михаил Ермаков</h3>
                 <p class="work-person" lang="en">UI Designer</p>
+                <ul class="list list-social-team">
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-team-item">
+                    <a href="" class="social-team-link">
+                      <svg class="social-team-icon" width="20" height="20">
+                        <use href="./images/aicons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
