finish start page

--- a/index.html
+++ b/index.html
@@ -295,37 +295,121 @@
           </ul>
         </div>
       </section>
+      <!-- Постоянные клиенты  -->
+      <section class="section-clients">
+        <div class="container">
+          <h2 class="title-clients">Постоянные клиенты</h2>
+          <ul class="list list-clients">
+            <li class="item-clients">
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./images/aicons.svg#company1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-clients">
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./images/aicons.svg#company2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-clients">
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./images/aicons.svg#company3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-clients">
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./images/aicons.svg#group-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-clients">
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./images/aicons.svg#company5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-clients">
+              <a href="" class="link-clients">
+                <svg class="icon-clients" width="106" height="60">
+                  <use href="./images/aicons.svg#group6"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- Контакты -->
 
     <footer class="footer-block">
-      <div class="container">
-        <a class="link" href="#0" lang="en"
-          ><span class="first-color-logo">Web</span
-          ><span class="second-color-logo futter-logo-color"> Studio</span>
-        </a>
-
-        <address class="contacts">
-          <ul class="list">
-            <li>
-              <a
-                class="link contacts-address"
-                href="https://goo.gl/maps/wN2QfeuY1FiPQJow7"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                г. Киев, пр-т Леси Украинки, 26
+      <div class="container futter-container">
+        <div class="address-block">
+          <a class="link" href="#0" lang="en"
+            ><span class="first-color-logo">Web</span
+            ><span class="second-color-logo futter-logo-color"> Studio</span>
+          </a>
+          <address class="contacts">
+            <ul class="list">
+              <li>
+                <a
+                  class="link contacts-address"
+                  href="https://goo.gl/maps/wN2QfeuY1FiPQJow7"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="mail-futter">
+                <a class="link contacts-mail mail-futter" href="" lang="en">info@example.com</a>
+              </li>
+              <li>
+                <a class="link contacts-tel" href=""> +38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="socials-block">
+          <h3 class="tittle-socials">ПРИСОЕДИНЯЙТЕСЬ</h3>
+          <ul class="list social-list">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#instagram"></use>
+                </svg>
               </a>
             </li>
-            <li class="mail-futter">
-              <a class="link contacts-mail mail-futter" href="" lang="en">info@example.com</a>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="link contacts-tel" href=""> +38 099 111 11 11</a>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
