--- a/portfolio.html
+++ b/portfolio.html
@@ -172,26 +172,69 @@
         </div>
       </section>
     </main>
+
+    <!-- Контакты -->
     <footer class="footer-block">
-      <div class="container footer-container">
-        <a class="link" href="#0" lang="en"
-          ><span class="first-color-logo">Web</span
-          ><span class="second-color-logo futter-logo-color"> Studio</span>
-        </a>
-        <address class="contacts">
-          <ul class="list">
-            <li>
-              <!-- Контакты -->
-              <a class="link contacts-address" href=""> г. Киев, пр-т Леси Украинки, 26 </a>
+      <div class="container futter-container">
+        <div class="address-block">
+          <a class="link" href="#0" lang="en"
+            ><span class="first-color-logo">Web</span
+            ><span class="second-color-logo futter-logo-color"> Studio</span>
+          </a>
+          <address class="contacts">
+            <ul class="list">
+              <li>
+                <a
+                  class="link contacts-address"
+                  href="https://goo.gl/maps/wN2QfeuY1FiPQJow7"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="mail-futter">
+                <a class="link contacts-mail mail-futter" href="" lang="en">info@example.com</a>
+              </li>
+              <li>
+                <a class="link contacts-tel" href=""> +38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="socials-block">
+          <h3 class="tittle-socials">ПРИСОЕДИНЯЙТЕСЬ</h3>
+          <ul class="list social-list">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="mail-futter">
-              <a class="link contacts-mail" href="" lang="en">info@example.com</a>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="link contacts-tel" href=""> +38 099 111 11 11</a>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/aicons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
