--- a/portfolio.html
+++ b/portfolio.html
@@ -86,87 +86,110 @@
 
           <ul class="list gallery-list">
             <li class="img-list">
-              <img
-                src="./images/portfolio/tehnokryak.jpg"
-                alt="веб-сайт"
-                width="370"
-                height="294"
-              />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Технокряк</h2>
-                <p class="portfolio-text-pic">Веб-сайт</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/tehnokryak.jpg"
+                  alt="веб-сайт"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Технокряк</h2>
+                  <p class="portfolio-text-pic">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img src="./images/portfolio/poster.jpg" alt="постер" width="370" height="294" />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Постер New Orlean vs Golden Star</h2>
-                <p class="portfolio-text-pic">Дизайн</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img src="./images/portfolio/poster.jpg" alt="постер" width="370" height="294" />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Постер New Orlean vs Golden Star</h2>
+                  <p class="portfolio-text-pic">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img src="./images/portfolio/Seafood.jpg" alt="логотип" width="370" height="294" />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Ресторан Seafood</h2>
-                <p class="portfolio-text-pic">Приложение</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img src="./images/portfolio/Seafood.jpg" alt="логотип" width="370" height="294" />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Ресторан Seafood</h2>
+                  <p class="portfolio-text-pic">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img src="./images/portfolio/Prime.jpg" alt="наушники" width="370" height="294" />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Проект Prime</h2>
-                <p class="portfolio-text-pic">Маркетинг</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img src="./images/portfolio/Prime.jpg" alt="наушники" width="370" height="294" />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Проект Prime</h2>
+                  <p class="portfolio-text-pic">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img src="./images/portfolio/Boxes.jpg" alt="коробки" width="370" height="294" />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Проект Boxes</h2>
-                <p class="portfolio-text-pic">Приложение</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img src="./images/portfolio/Boxes.jpg" alt="коробки" width="370" height="294" />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Проект Boxes</h2>
+                  <p class="portfolio-text-pic">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img
-                src="./images/portfolio/Inspiration.jpg"
-                alt="монитор"
-                width="370"
-                height="294"
-              />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic" lang="en">Inspiration has no Borders</h2>
-                <p class="portfolio-text-pic">Веб-сайт</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/Inspiration.jpg"
+                  alt="монитор"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic" lang="en">Inspiration has no Borders</h2>
+                  <p class="portfolio-text-pic">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img
-                src="./images/portfolio/Limited-Edition.jpg"
-                alt="издание"
-                width="370"
-                height="294"
-              />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Издание Limited Edition</h2>
-                <p class="portfolio-text-pic">Дизайн</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/Limited-Edition.jpg"
+                  alt="издание"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Издание Limited Edition</h2>
+                  <p class="portfolio-text-pic">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img src="./images/portfolio/project-lab.jpg" alt="бирка" width="370" height="294" />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic">Проект LAB</h2>
-                <p class="portfolio-text-pic">Маркетинг</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/project-lab.jpg"
+                  alt="бирка"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content">
+                  <h2 class="portfolio-header-pic">Проект LAB</h2>
+                  <p class="portfolio-text-pic">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="img-list">
-              <img
-                src="./images/portfolio/Growing-Business.jpg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <div class="card-content">
-                <h2 class="portfolio-header-pic" lang="en">Growing Business</h2>
-                <p class="portfolio-text-pic">Приложение</p>
-              </div>
+              <a href="" class="link portfolio-link">
+                <img
+                  src="./images/portfolio/Growing-Business.jpg"
+                  alt="ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-content portfolio-link">
+                  <h2 class="portfolio-header-pic" lang="en">Growing Business</h2>
+                  <p class="portfolio-text-pic">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
